<resources>
    <string name="app_name">Memory_Forever</string>
    <string name="login_weixin">微信登录</string>
    <string name="memory_forever">记忆永恒</string>
    <string name="create_module">创建模块</string>
    <string name="edit_module">编辑模块</string>
    <string name="type_selector">类型选择：</string>
    <string name="zengyan">赠言</string>
    <string name="record">记录</string>
    <string name="module_name">模块名称：</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="invitate_student_greet">邀请\n赠言</string>
    <string name="publish">发表</string>
    <string name="want_say_something">这一刻想说点什么...</string>
    <string name="promotion">提示</string>
    <string name="confirm_delete_video">确定要删除这段视频吗？</string>
    <string name="confirm_delete_image">确定要删除这张照片吗？</string>
    <string name="confirm_buy">赠言功能是付费服务，确定购买吗？</string>
    <string name="capture">拍摄</string>
    <string name="select_from_photo">从相册选择</string>
    <string name="confirm_delete_module">确定要删除该部分吗？</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="please_input_name">请输入名称</string>
    <string name="please_set_cover">请设置封面图片</string>
    <string name="user_name">昵称:null</string>
    <string name="extend_num">推广人数：10</string>
    <string name="extend_money">推广费：5000.50</string>
    <string name="withdraw_enable">可提现：4000.00</string>
    <string name="withdrawed">已提现：1000.00</string>
    <string name="extend_earn_money">推广赚钱</string>
    <string name="alipay_num">支付宝账号:</string>
    <string name="bind">绑定</string>
    <string name="withdraw">提现</string>
</resources>
