<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/top_layout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:onClick="showSlideLayout"
                android:src="@drawable/icon_more_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/memory_forever"
                android:textSize="24sp" />

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/module_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/fab_selector"
            android:onClick="addModule"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/slide_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/left_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/slide_layout"
                app:layout_constraintLeft_toLeftOf="@+id/slide_layout"
                app:layout_constraintRight_toLeftOf="@+id/right_view"
                app:layout_constraintTop_toTopOf="@+id/slide_layout" />

            <com.danqin.memory_forever.view.ImageViewPlus
                android:id="@+id/user_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/india_chennai_highway"
                app:layout_constraintLeft_toLeftOf="@+id/slide_layout"
                app:layout_constraintTop_toTopOf="@+id/slide_layout"
                />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/user_name"
                app:layout_constraintBottom_toBottomOf="@+id/user_img"
                app:layout_constraintLeft_toRightOf="@+id/user_img"
                app:layout_constraintTop_toTopOf="@+id/user_img" />

            <TextView
                android:id="@+id/extend_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/extend_num"
                app:layout_constraintLeft_toLeftOf="@+id/user_img"
                app:layout_constraintTop_toBottomOf="@+id/user_img" />

            <View
                android:id="@+id/divider_line_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/extend_num" />

            <TextView
                android:id="@+id/extend_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/extend_money"
                app:layout_constraintLeft_toLeftOf="@+id/extend_num"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_1" />

            <View
                android:id="@+id/divider_line_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/extend_money" />

            <TextView
                android:id="@+id/withdraw_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/withdraw_enable"
                app:layout_constraintLeft_toLeftOf="@+id/extend_earn_money"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_2" />

            <View
                android:id="@+id/divider_line_3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/withdraw_enable" />

            <TextView
                android:id="@+id/withdrawed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/withdrawed"
                app:layout_constraintLeft_toLeftOf="@+id/extend_earn_money"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_3" />

            <View
                android:id="@+id/divider_line_4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/withdrawed" />

            <TextView
                android:id="@+id/extend_earn_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/extend_earn_money"
                app:layout_constraintLeft_toLeftOf="@+id/extend_money"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_4" />

            <View
                android:id="@+id/divider_line_5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/extend_earn_money" />

            <TextView
                android:id="@+id/alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alipay_num"
                app:layout_constraintLeft_toLeftOf="@+id/extend_earn_money"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_5" />

            <TextView
                android:id="@+id/bind_alipay_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:onClick="bindAlipayNumber"
                android:text="@string/bind"
                android:textColor="@color/design_default_color_primary_dark"
                app:layout_constraintBottom_toBottomOf="@+id/alipay"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toTopOf="@+id/alipay" />

            <TextView
                android:id="@+id/alipay_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/alipay"
                app:layout_constraintLeft_toRightOf="@+id/alipay"
                app:layout_constraintTop_toTopOf="@+id/alipay" />

            <EditText
                android:id="@+id/alipay_num_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/alipay"
                app:layout_constraintLeft_toRightOf="@+id/alipay"
                app:layout_constraintRight_toLeftOf="@+id/bind_alipay_num"
                app:layout_constraintTop_toTopOf="@+id/alipay" />

            <TextView
                android:id="@+id/alipay_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/alipay"
                app:layout_constraintLeft_toRightOf="@+id/alipay"
                app:layout_constraintRight_toLeftOf="@+id/bind_alipay_num"
                app:layout_constraintTop_toTopOf="@+id/alipay" />

            <View
                android:id="@+id/divider_line_6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/dialog_line_color"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@+id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/alipay" />

            <Button
                android:id="@+id/withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/withdraw"
                app:layout_constraintLeft_toLeftOf="@+id/left_view"
                app:layout_constraintRight_toRightOf="@id/left_view"
                app:layout_constraintTop_toBottomOf="@+id/divider_line_6" />

            <View
                android:id="@+id/right_view"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:alpha="0.3"
                android:background="@color/black"
                android:onClick="hideSlideLayout"
                app:layout_constraintBottom_toBottomOf="@+id/slide_layout"
                app:layout_constraintRight_toRightOf="@+id/slide_layout"
                app:layout_constraintTop_toTopOf="@+id/slide_layout" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>